修改配置，方便本地 debug

--- a/distribution/conf/broker.conf
+++ b/distribution/conf/broker.conf
@@ -20,3 +20,17 @@ deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
+namesrvAddr = 127.0.0.1:9876
+autoCreateTopicEnable = true
+＃ 存储路径
+storePathRootDir=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store
+#commitLog 存储路径
+storePathCommitLog=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store\\commitlog
+＃ 消费队列存储路径
+storePathConsumeQueue=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store\\consumequeue
+＃ 消息索引｜存储路径
+storePathindex=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store\\index
+#checkpoint 文件存储路径
+storeCheckpoint=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store\\checkpoint
+#abort 文件存储路径
+abortFile=D:\\Codes\\opensource\\middleware\\mq\\rocketmq\\distribution\\store\\abort
